--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "74ddbc18",
+   "id": "24296cca",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "65fd484c",
+   "id": "58561f92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1d3d5e21",
+   "id": "fc8b3a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "118851fe",
+   "id": "4697e8c0",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d38b846d",
+   "id": "26b07831",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "60f48577",
+   "id": "f1d83d23",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037168e3",
+   "id": "b2e4ba6b",
    "metadata": {},
    "source": [
     "# Preprocessing"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b7d9b574",
+   "id": "5c64b840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bf131895",
+   "id": "18e6b5f8",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1485c008",
+   "id": "4fad9b38",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5ff29fca",
+   "id": "f12f7805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "45631779",
+   "id": "372f04de",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6ac4e817",
+   "id": "ad4cbec5",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "83db015f",
+   "id": "efd60974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cbcbf6c3",
+   "id": "060aeffc",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "79d3a14a",
+   "id": "8dc409bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fa5d7089",
+   "id": "0a1491b1",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "20353392",
+   "id": "57918514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b951711a",
+   "id": "69017d5f",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c08ac0e6",
+   "id": "ac756011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f31865d4",
+   "id": "a042e969",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "036fff53",
+   "id": "4988f1df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b0ea04eb",
+   "id": "290a3942",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9300a42b",
+   "id": "05dd1536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c2ee54ba",
+   "id": "93bd11bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "cf3f5fec",
+   "id": "8a50f815",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "045f85ca",
+   "id": "ce06ae0c",
    "metadata": {},
    "source": [
     "# Creating model"
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "dff3a9d9",
+   "id": "3999e514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "e4cdbeef",
+   "execution_count": 58,
+   "id": "74faff8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,16 +848,352 @@
     "model.add(Dense(128, activation ='relu'))\n",
     "model.add(Dense(256, activation ='relu'))\n",
     "model.add(Dense(128, activation ='relu'))\n",
+    "\n",
+    "#final layer for classification\n",
     "model.add(Dense(6, activation ='sigmoid'))"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "bbd393d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='BinaryCrossentropy', optimizer='Adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ce48e56d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding_1 (Embedding)     (None, None, 32)          6400032   \n",
+      "                                                                 \n",
+      " bidirectional_1 (Bidirectio  (None, 64)               16640     \n",
+      " nal)                                                            \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 128)               8320      \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 256)               33024     \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 6)                 774       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 6,491,686\n",
+      "Trainable params: 6,491,686\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e95742ba",
+   "id": "9ccb3164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history= model.fit(train, epochs=10, validation_data=val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81734d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8d7d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,5))\n",
+    "pd.DataFrame(history.history).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02a04033",
+   "metadata": {},
+   "source": [
+    "# Make prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "343c381a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch= test.as_numpy_iterator().next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "148ebc20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text=vectorize(\"Hi stupid bro i will kill you murder you tonight i am comming to fuck you\")\n",
+    "\n",
+    "res= model.predict(np.expand_dims(input_text, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "463c3c93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d042a567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch= test.as_numpy_iterator().next()\n",
+    "test_batch_X, test_batch_Y = batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2210d5c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict(test_batch_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e5aec9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(model.predict(test_batch_X) >0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957332b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs= model.predict(batch_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "817097fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0182ab4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.metrics import Precision, Recall, CategoricalAccuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eff18e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre= Precision()\n",
+    "re = Recall()\n",
+    "acc= CategoricalAccuracy() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "717a2a2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre= Precision()\n",
+    "re = Recall()\n",
+    "acc= CategoricalAccuracy() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dd0bec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Precissiion: {pre.result().numpy()}, Recall: {re.result().numpy()}, Accuracy: {acc.result().numpy()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf93458",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78414da0",
+   "metadata": {},
+   "source": [
+    "# Saving the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63346606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "paths = {\n",
+    "    'CHECKPOINT_PATH': os.path.join('Tensorflow'),\n",
+    " }\n",
+    "for path in paths.values():\n",
+    "    if not os.path.exists(path):\n",
+    "        if os.name == 'posix':\n",
+    "            !mkdir -p {path}\n",
+    "        if os.name == 'nt':\n",
+    "            !mkdir {path}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b4f3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "model_version=max([int(i) for i in os.listdir(\"Tensorflow\") + [0]])+1\n",
+    "model.save(f\"Tensorflow/{model_version}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53865214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"toxicity.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b84a737f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lOADING SAVED MODEL\n",
+    "import tensorflow as tf\n",
+    "model=tf.keras.models.load_model(\"toxicity.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a2cd94c",
+   "metadata": {},
+   "source": [
+    "# For Gradio App"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50ad6b9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install gradio jinja2\n",
+    "import gradio as gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5652a464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_comment(comment):\n",
+    "  vectorized_comment=vectorize([comment])\n",
+    "  results= model.predict(vectorized_comment)\n",
+    "\n",
+    "  text=''\n",
+    "  for idx, col in enumerate(dataset.columns[2:]):\n",
+    "    text += '{}: {}\\n'.format(col, results[0][idx]>0.5)\n",
+    "  return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90f177f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface=gr.Interface(fn=score_comment, inputs=gr.inputs.Textbox(lines=2,placeholder='Commebnt to check'),\n",
+    "                       outputs='text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ed08aee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface.launch(share=True)"
+   ]
   }
  ],
  "metadata": {
