--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "24296cca",
+   "id": "849ed98e",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "58561f92",
+   "id": "d2952bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc8b3a40",
+   "id": "c42f2fc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4697e8c0",
+   "id": "c9b35dab",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "26b07831",
+   "id": "ee39db84",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f1d83d23",
+   "id": "421334fd",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e4ba6b",
+   "id": "6393ef89",
    "metadata": {},
    "source": [
     "# Preprocessing"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5c64b840",
+   "id": "b72e797a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "18e6b5f8",
+   "id": "a0f0819e",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4fad9b38",
+   "id": "21c55203",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f12f7805",
+   "id": "a03d8bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "372f04de",
+   "id": "5926e98c",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ad4cbec5",
+   "id": "8cdf92a9",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "efd60974",
+   "id": "b061710b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "060aeffc",
+   "id": "42975906",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8dc409bb",
+   "id": "1eee25fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0a1491b1",
+   "id": "e8706c5b",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "57918514",
+   "id": "e389ac07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "69017d5f",
+   "id": "a4309896",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ac756011",
+   "id": "04ef4066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a042e969",
+   "id": "b4350f22",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "4988f1df",
+   "id": "0dece6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "290a3942",
+   "id": "7dea3013",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "05dd1536",
+   "id": "efa614c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "93bd11bc",
+   "id": "6f499e7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8a50f815",
+   "id": "27adb022",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce06ae0c",
+   "id": "ca5ca968",
    "metadata": {},
    "source": [
     "# Creating model"
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3999e514",
+   "id": "6e0946b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "74faff8a",
+   "id": "b18de101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "bbd393d3",
+   "id": "28cb859c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ce48e56d",
+   "id": "62a284e1",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ccb3164",
+   "id": "ad1e689a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81734d0a",
+   "id": "1fb1f7b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "model=tf.keras.models.load_model(\"toxicity.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af1b0fe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8d7d08",
+   "id": "e954b556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02a04033",
+   "id": "b28520c0",
    "metadata": {},
    "source": [
     "# Make prediction"
@@ -945,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "343c381a",
+   "id": "dcbc4b90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "148ebc20",
+   "id": "c5bf7cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "463c3c93",
+   "id": "8d371887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d042a567",
+   "id": "d028b955",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2210d5c3",
+   "id": "194e5761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5aec9d",
+   "id": "6e723211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "957332b9",
+   "id": "3cedc1ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "817097fc",
+   "id": "a1a61bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0182ab4d",
+   "id": "f77141fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eff18e6",
+   "id": "db4c5fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717a2a2c",
+   "id": "4c3df764",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dd0bec3",
+   "id": "5cb33022",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,14 +1083,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf93458",
+   "id": "b4f3e593",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "78414da0",
+   "id": "68b88ea6",
    "metadata": {},
    "source": [
     "# Saving the model"
@@ -1088,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63346606",
+   "id": "43565428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54b4f3a7",
+   "id": "b40ee8ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53865214",
+   "id": "fe7b4f1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b84a737f",
+   "id": "2adb0eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a2cd94c",
+   "id": "c7f69eb7",
    "metadata": {},
    "source": [
     "# For Gradio App"
@@ -1149,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50ad6b9a",
+   "id": "61dadd1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5652a464",
+   "id": "16b3e39d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90f177f",
+   "id": "11b4043e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed08aee",
+   "id": "84d31989",
    "metadata": {},
    "outputs": [],
    "source": [
