--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "849ed98e",
+   "id": "054f89ca",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2952bae",
+   "id": "58aa1e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c42f2fc0",
+   "id": "61dda448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9b35dab",
+   "id": "4f98daf0",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ee39db84",
+   "id": "b69a7408",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "421334fd",
+   "id": "0f1db2a9",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6393ef89",
+   "id": "3894a919",
    "metadata": {},
    "source": [
     "# Preprocessing"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b72e797a",
+   "id": "4a52a410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a0f0819e",
+   "id": "3835dd93",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "21c55203",
+   "id": "13e33a76",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a03d8bad",
+   "id": "86e683dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5926e98c",
+   "id": "95b2e063",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8cdf92a9",
+   "id": "393e7439",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b061710b",
+   "id": "7551b9f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "42975906",
+   "id": "2eb2ae4b",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1eee25fd",
+   "id": "2f54c6e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e8706c5b",
+   "id": "b9815dcf",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e389ac07",
+   "id": "3b8d6162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a4309896",
+   "id": "2d8a1f97",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "04ef4066",
+   "id": "fd87a2d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b4350f22",
+   "id": "00b68038",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0dece6af",
+   "id": "934aa309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7dea3013",
+   "id": "af7a8229",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "efa614c0",
+   "id": "e5d2a4b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6f499e7c",
+   "id": "965a7078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "27adb022",
+   "id": "6934789b",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5ca968",
+   "id": "0c7c5f69",
    "metadata": {},
    "source": [
     "# Creating model"
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6e0946b8",
+   "id": "cc78323f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b18de101",
+   "id": "579dccb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "28cb859c",
+   "id": "49f96d64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "62a284e1",
+   "id": "5daaf20a",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad1e689a",
+   "id": "899ecb98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb1f7b2",
+   "id": "d7710eb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1b0fe5",
+   "id": "9e65f081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e954b556",
+   "id": "19b8352f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b28520c0",
+   "id": "3292a456",
    "metadata": {},
    "source": [
     "# Make prediction"
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcbc4b90",
+   "id": "4db348c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,12 +965,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c5bf7cd0",
+   "execution_count": 64,
+   "id": "773e7a54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_text=vectorize(\"Hi stupid bro i will kill you murder you tonight i am comming to fuck you\")\n",
+    "input_text=vectorize(\"Hi stupid bro i will kill you murder you tonight \")\n",
     "\n",
     "res= model.predict(np.expand_dims(input_text, 0))"
    ]
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d371887",
+   "id": "4de5f0d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d028b955",
+   "id": "a58ec08c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194e5761",
+   "id": "6da86fbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e723211",
+   "id": "5e26e47e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cedc1ae",
+   "id": "c8065aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a61bf5",
+   "id": "a423c762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f77141fb",
+   "id": "38638892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4c5fdb",
+   "id": "d440fd6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3df764",
+   "id": "1790c21a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb33022",
+   "id": "7fa615cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,14 +1083,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f3e593",
+   "id": "f17d5008",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "68b88ea6",
+   "id": "caa1342d",
    "metadata": {},
    "source": [
     "# Saving the model"
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43565428",
+   "id": "ee2e695c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b40ee8ad",
+   "id": "2d09c3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7b4f1e",
+   "id": "420e0e5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2adb0eca",
+   "id": "079ed4d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f69eb7",
+   "id": "24e989cd",
    "metadata": {},
    "source": [
     "# For Gradio App"
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61dadd1f",
+   "id": "c0af725e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16b3e39d",
+   "id": "f1346a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b4043e",
+   "id": "b7c02e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84d31989",
+   "id": "048f2d7c",
    "metadata": {},
    "outputs": [],
    "source": [
